# IoTitc

./: .gitignore  pyproject.toml
docs/source/: conf.py  index.rst
iotitc/influxdb/: influxdbitc.py
iotitc/raspberry/: tools.py
